<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="action_settings">Settings</string>
    <string name="subject_line">Coffee Needed</string>
    <string name="less_than_zero">Your Ordering too Less</string>
    <string name="more_than_ten">Your Ordering too Much</string>
    <string name="mail">Mail</string>
    <string name="total">Total</string>
    <string name="thank_you">Thank You</string>
    <string name="enjoy_your_coffee">Enjoy Your coffee</string>
    <string name="enjoy_with_cream">Enjoy Your coffee with cream</string>
    <string name="with_chocolate">Enjoy Your coffee with chocolate</string>
    <string name="with_cream_chocolate">Enjoy Your coffee with chocolate and cream</string>
    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order_summary">Order Summary</string>
    <string name="start_up">Total = $0.00 Thank You ! :)</string>
    <string name="order">Order</string>

</resources>
