<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="com.example.deexi.justjava.MainActivity">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="0dp"
        android:layout_height="0dp" />

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            />

    </android.support.design.widget.AppBarLayout>
    <EditText
        android:id="@+id/name_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textCapWords"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/toppings"
        android:textAllCaps="true"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp">

        <CheckBox
            android:id="@+id/whippedCream_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:onClick="withWhippedCream"
            android:textColorHighlight="@android:color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/whipped_cream"
            android:textColor="@android:color/black"
            android:textSize="16dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp">

        <CheckBox
            android:id="@+id/chocolate_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:onClick="withChocolate"
            android:textColorHighlight="@android:color/black"/>

        <TextView
            android:id="@+id/with_chocolate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/chocolate"
            android:textColor="@android:color/black"
            android:textSize="16dp" />
    </LinearLayout>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/quantity"
        android:textAllCaps="true"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sub_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_weight="0"
            android:onClick="subCoffee"
            android:text="-"

            android:textSize="16dp" />

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="2"
            android:paddingHorizontal="8dp"
            android:text="0"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/add_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_weight="0"
            android:onClick="addCoffee"
            android:text="+"
            android:textSize="16dp" />
    </LinearLayout>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/holo_green_light"
        android:fontFamily="sans-serif"
        android:paddingHorizontal="16dp"
        android:text="@string/order_summary"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/price_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="16dp"
        android:text="@string/start_up"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="submitOrder1"
        android:text="@string/order"
        android:backgroundTint="#E59866"
        android:textSize="16dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="mailIntent"
        android:backgroundTint="#E59866"
        android:layout_gravity="center"
        android:text="@string/mail"
        android:textSize="16dp" />

    <ImageView
        android:id="@+id/output_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#E59866"
        android:scaleType="centerCrop"
        android:src="@mipmap/onlycoffee"/>


</LinearLayout>
</ScrollView>